--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3.8"
 services:
   mongodb:
+    container_name: mongodb
     image: mongo
+    restart: always
     ports:
       - 27017:27017
     volumes:
@@ -9,11 +11,12 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     networks:
       - mango-net
   
   mysqldb:
+    container_name: mysqldb
     image: mysql
     restart: always
     ports:
@@ -33,6 +36,7 @@ services:
       - mango-net
 
   redisdb:
+    container_name: redisdb
     image: redis
     ports:
       - 6379:6379
