Feat(#6):redis -> redis:alpine

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,19 +31,19 @@ services:
     volumes:
       - ./data/mysql:/var/lib/mysql
       - ./initdb/mysql:/docker-entrypoint-initdb.d/
-
     networks:
       - mango-net
 
   redisdb:
     container_name: redisdb
-    image: redis
+    image: redis:alpine
     ports:
       - 6379:6379
     volumes:
       - ./data/redis:/data/db
     networks:
       - mango-net
+      
 networks:
   mango-net:
     driver: bridge
